--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <nav class="header-nav">
             <ul class="list header-list">
                 <li class="header-item"><a class="link header-link" href="./index.html">Студия</a></li>
-                <li class="header-item"><a class="link header-link" href="./portfolio.html"><span class="header-title-highlight">Портфолио</span></a></li>
+                <li class="header-item"><a class="link header-link current" href="./portfolio.html"><span class="header-title-highlight">Портфолио</span></a></li>
                 <li class="header-item"><a class="link header-link" href="">Контакты</a></li>    
             </ul>
         </nav>
