--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <a class="link header-title" href="./index.html"><span class="header-title-web">Web</span>Studio</a>
         <nav class="header-nav">
             <ul class="list header-list">
-                <li class="header-item"><a class="link header-link" href="./index.html"><span class="header-title-highlight">Студия</span></a></li>
-                <li class="header-item"><a class="link header-link" href="./portfolio.html">Портфолио</a></li>
-                <li class="header-item"><a class="link header-link" href="">Контакты</a></li>    
+                <li class="header-item"><a class="link header-link current" href="./index.html"><span class="header-title-highlight">Студия</span></a></li>
+                <li class="header-item"><a class="link header-link " href="./portfolio.html">Портфолио</a></li>
+                <li class="header-item"><a class="link header-link " href="">Контакты</a></li>    
             </ul>
         </nav>
         <div class="header-connect">
@@ -123,7 +123,7 @@
             </div>
         </section>
 
-        <!--team(section 4)-->
+        <!--team-->
         <section class="team">
             <div class="container team-container">
             <h2 class="team-title">Наша команда</h2>
