--- a/portfolio.html
+++ b/portfolio.html
@@ -65,8 +65,11 @@
             <!-- projects -->
             <ul class="list projects-list">
                 <li class="projects-item">
-                    <a href="" class="projects-item-link link">
+                    <div class="projects-item-wrap">
+                    <a href="" class="link projects-item-link">
                     <img src="./images/projects-img-1.jpg" alt="Ноутбук">
+                    <p class="projects-img-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="projects-item-text">
                     <h3 class="projects-title">Технокряк</h3>
                     <p class="projects-type">Веб-сайт</p>
