--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="solutions bg">
             <div class="container">
                 <h1 class="solutions-title">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="solutions-btn">Заказать услугу</button>
+                <button type="button" class="solutions-btn" data-modal-open>Заказать услугу</button>
             </div>  
         </section>
 
@@ -459,5 +459,16 @@
         </div>
     </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-btn-cloae" data-modal-close>
+                <svg class="modal-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-close-black">
+                    </use>
+                </svg>
+            </button>
+        </div>
+        <script src="./js/modal.js"></script>
+    </div>
 </body>
 </html>
