--- a/index.html
+++ b/index.html
@@ -116,9 +116,24 @@
             <div class="container">
             <h2 class="after-about-title">Чем мы занимаемся</h2>
             <ul class="list after-about-list">
-                <li class="after-about-item"><img src="./images/section3-img-1.jpg" alt="печатает на клавиатуре" width="370"></li>
-                <li class="after-about-item"><img src="./images/section3-img-2.jpg" alt="подбирает дизайн приложения" width="370"></li>
-                <li class="after-about-item"><img src="./images/section3-img-3.jpg" alt="планшет" width="370"></li>
+                <li class="after-about-item">
+                    <div class="after-about-wrap">
+                    <img src="./images/section3-img-1.jpg" alt="печатает на клавиатуре" width="370">
+                    <p class="after-about-text">Десктопные приложения</p>
+                    </div>
+                </li>
+                <li class="after-about-item">
+                    <div class="after-about-wrap">
+                    <img src="./images/section3-img-2.jpg" alt="подбирает дизайн приложения" width="370">
+                    <p class="after-about-text">Мобильные приложения</p>
+                    </div>
+                </li>
+                <li class="after-about-item">
+                    <div class="after-about-wrap">
+                    <img src="./images/section3-img-3.jpg" alt="планшет" width="370">
+                    <p class="after-about-text">Дизайнерские решения</p>
+                    </div>
+                </li>
             </ul>
             </div>
         </section>
