--- a/portfolio.html
+++ b/portfolio.html
@@ -77,8 +77,11 @@
                     </a>
                 </li>
                 <li class="projects-item">
+                    <div class="projects-item-wrap">
                     <a href="" class="projects-item-link link">
                     <img src="./images/projects-img-2.jpg" alt="Баскетболисты">
+                    <p class="projects-img-text">Тут может быть ваше описание</p>
+                    </div>
                     <div class="projects-item-text">
                     <h3 class="projects-title">Постер New Orlean vs Golden Star</h3>
                     <p class="projects-type">Дизайн</p>
@@ -86,8 +89,11 @@
                     </a>
                 </li>
                 <li class="projects-item">
+                    <div class="projects-item-wrap">
                     <a href="" class="projects-item-link link"> 
                     <img src="./images/projects-img-3.jpg" alt="Лого ресторана">
+                    <p class="projects-img-text">Тут может быть ваше описание</p>
+                    </div>
                     <div class="projects-item-text">
                     <h3 class="projects-title">Ресторан Seafood</h3>
                     <p class="projects-type">Приложение</p>
@@ -95,8 +101,11 @@
                     </a>
                 </li>
                 <li class="projects-item">
+                    <div class="projects-item-wrap">
                     <a href="" class="projects-item-link link">
                     <img src="./images/projects-img-4.jpg" alt="Наушники">
+                    <p class="projects-img-text">Тут может быть ваше описание</p>
+                    </div>
                     <div class="projects-item-text">
                     <h3 class="projects-title">Проект Prime</h3>
                     <p class="projects-type">Маркетинг</p>
@@ -104,8 +113,11 @@
                     </a>
                 </li>
                 <li class="projects-item">
+                    <div class="projects-item-wrap">
                     <a href="" class="projects-item-link link">
                     <img src="./images/projects-img-5.jpg" alt="Коробки">
+                    <p class="projects-img-text">Тут может быть ваше описание</p>
+                    </div>
                     <div class="projects-item-text">
                     <h3 class="projects-title">Проект Boxes</h3>
                     <p class="projects-type">Приложение</p>
@@ -113,8 +125,11 @@
                     </a>
                 </li>
                 <li class="projects-item">
+                    <div class="projects-item-wrap">
                     <a href="" class="projects-item-link link">
                     <img src="./images/projects-img-6.jpg" alt="Компьютер">
+                    <p class="projects-img-text">Тут может быть ваше описание</p>
+                    </div>
                     <div class="projects-item-text">
                     <h3 class="projects-title">Inspiration has no Borders</h3>
                     <p class="projects-type">Веб-сайт</p>
@@ -122,8 +137,11 @@
                     </a>
                 </li>
                 <li class="projects-item">
+                    <div class="projects-item-wrap">
                     <a href="" class="projects-item-link link">
                     <img src="./images/projects-img-7.jpg" alt="Книга">
+                    <p class="projects-img-text">Тут может быть ваше описание</p>
+                    </div>
                     <div class="projects-item-text">
                     <h3 class="projects-title">Издание Limited Edition</h3>
                     <p class="projects-type">Дизайн</p>
@@ -131,8 +149,11 @@
                     </a>
                 </li>
                 <li class="projects-item">
+                    <div class="projects-item-wrap">
                     <a href="" class="projects-item-link link">
                     <img src="./images/projects-img-8.jpg" alt="Бирка">
+                    <p class="projects-img-text">Тут может быть ваше описание</p>
+                    </div>
                     <div class="projects-item-text">
                     <h3 class="projects-title">Проект LAB</h3>
                     <p class="projects-type">Маркетинг</p>
@@ -140,8 +161,11 @@
                     </a>
                 </li>
                 <li class="projects-item">
+                    <div class="projects-item-wrap">
                     <a href="" class="projects-item-link link">
                     <img src="./images/projects-img-9.jpg" alt="Ноутбук">
+                    <p class="projects-img-text">Тут может быть ваше описание</p>
+                    </div>
                     <div class="projects-item-text">
                     <h3 class="projects-title">Growing Business</h3>
                     <p class="projects-type">Приложение</p>
