--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 <li class="footer-social-item">
                     <a 
                         href="" 
-                        class="footer-social-link">
+                        class="footer-social-link link">
                         <svg class="footer-social-icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-instagram">
                             </use>
